--- a/quote_machine/css/styles.css
+++ b/quote_machine/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Ostrich";
-  src:url("fonts/Oslo_II.ttf") format('truetype');
+  src: url("fonts/Oslo_II.ttf") format('truetype');
 }
 
 @font-face {
@@ -14,11 +14,11 @@
 }
 
 body {
-
   background-color: white;
   display: flex;
   justify-content: center;
-
+  flex-direction: column;
+  text-align: center;
 }
 
 h1 {
@@ -32,16 +32,20 @@ h1 {
 .quote {
   font-family: "Adler";
   font-size: 20px;
-
 }
+
 button {
   font-family: "Adler";
   font-size: 26px;
 }
 
-.center-div
-{
-  position: absolute;
+#twitterButton {
+  color: #0084b4;
+}
+
+
+.center-div {
+  /*position: absolute;*/
   margin: auto;
   top: 0;
   right: 0;
@@ -54,5 +58,4 @@ button {
   display: flex;
   text-align: center;
   flex-direction: column;
-
 }
