--- a/local_weather/scss/styles.scss
+++ b/local_weather/scss/styles.scss
@@ -1,23 +1,47 @@
-header {
+
+@mixin for-size($size) {
+  @if $size == phone-only {
+    @media (max-width: 599px) { @content; }
+  } @else if $size == tablet-portrait-up {
+    @media (min-width: 600px) { @content; }
+  } @else if $size == tablet-landscape-up {
+    @media (min-width: 900px) { @content; }
+  } @else if $size == desktop-up {
+    @media (min-width: 1200px) { @content; }
+  } @else if $size == big-desktop-up {
+    @media (min-width: 1800px) { @content; }
+  }
+}
+
+header{
   width: 100%;
   height: 3.125em;
   position: fixed;
   top: 0em;
   left: 0em;
-  background-color: orange; }
-  header h1 {
+  background-color: orange;
+  h1 {
     background-color: blue;
     color: green;
     padding-left: .5em;
-    margin-bottom: .25em; }
-  header h4 {
+    margin-bottom: .25em;
+  }
+  h4 {
     display: inline-block;
     padding: .25em;
     background: red;
-    margin: 0em 0em; }
+    margin: 0em 0em;
+  }
+
+}
 
 body {
-  background-color: purple; }
+  background-color: purple;
+}
+
+
+
+
 
 #bottom {
   background: green;
@@ -26,13 +50,17 @@ body {
   position: fixed;
   bottom: 0em;
   left: 0em;
-  background-color: orange; }
-  #bottom .fiveDay {
+  background-color: orange;
+  .fiveDay {
     background: pink;
     display: inline-block;
     padding: .25em;
     background: red;
-    margin: 0em 0em; }
+    margin: 0em 0em;
+
+
+  }
+}
 
 /* C to f toggle button*/
 .cmn-toggle {
@@ -45,9 +73,6 @@ body {
   position: relative;
   cursor: pointer;
   outline: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none; }
 
 input.cmn-toggle-yes-no + label {
@@ -72,31 +97,18 @@ input.cmn-toggle-yes-no + label:before {
 input.cmn-toggle-yes-no + label:before {
   background-color: #dddddd;
   content: attr(data-off);
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  -o-transition: transform 0.5s;
   transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden; }
 
 input.cmn-toggle-yes-no + label:after {
   background-color: #8ce196;
   content: attr(data-on);
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  -o-transition: transform 0.5s;
   transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
-  -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden; }
 
 input.cmn-toggle-yes-no:checked + label:before {
-  -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg); }
 
 input.cmn-toggle-yes-no:checked + label:after {
-  -webkit-transform: rotateY(0);
   transform: rotateY(0); }
