--- a/local_weather/css/styles.css
+++ b/local_weather/css/styles.css
@@ -2,39 +2,70 @@ header {
   width: 100%;
   height: 3.125em;
   position: fixed;
-  top: 0em;
-  left: 0em;
-  background-color: orange; }
+  top: 0;
+  left: 0; }
   header h1 {
-    background-color: blue;
-    color: green;
-    padding-left: .5em;
-    margin-bottom: .25em; }
+    padding-left: 0.5em;
+    margin-bottom: 0.25em;
+    display: inline-block; }
   header h4 {
     display: inline-block;
-    padding: .25em;
-    background: red;
-    margin: 0em 0em; }
+    padding: 0.25em;
+    margin: 0;
+    padding-left: 0.5em; }
 
-body {
-  background-color: purple; }
+#temp {
+  height: 6em;
+  width: 100%;
+  margin-top: 11em;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  /* center horizontally */
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  /* center vertically */ }
+  #temp h1 {
+    padding: 0;
+    font-size: 6em; }
 
 #bottom {
   background: green;
   width: 100%;
   height: 8em;
   position: fixed;
-  bottom: 0em;
-  left: 0em;
-  background-color: orange; }
+  bottom: 0;
+  left: 0;
+  background-color: orange;
+  text-align: center; }
   #bottom .fiveDay {
     background: pink;
     display: inline-block;
-    padding: .25em;
-    background: red;
-    margin: 0em 0em; }
+    padding: 0.25em;
+    margin: 0;
+    height: 6em;
+    width: 3.75em;
+    text-align: center;
+    margin-top: 0.65em; }
+    #bottom .fiveDay .day {
+      background: red;
+      top: 0; }
+    #bottom .fiveDay .icon {
+      padding: 1em 1em 1.45em; }
+    #bottom .fiveDay .highLow {
+      background: green;
+      position: relative;
+      margin: 0 auto;
+      botom: 0; }
 
-/* C to f toggle button*/
+/* C to f toggle button */
 .cmn-toggle {
   position: absolute;
   margin-left: -624.9375em;
