--- a/local_weather/scss/styles.scss
+++ b/local_weather/scss/styles.scss
@@ -1,84 +1,132 @@
-
 @mixin for-size($size) {
-  @if $size == phone-only {
-    @media (max-width: 599px) { @content; }
-  } @else if $size == tablet-portrait-up {
-    @media (min-width: 600px) { @content; }
-  } @else if $size == tablet-landscape-up {
-    @media (min-width: 900px) { @content; }
-  } @else if $size == desktop-up {
-    @media (min-width: 1200px) { @content; }
-  } @else if $size == big-desktop-up {
-    @media (min-width: 1800px) { @content; }
+   @if $size == phone-only{
+    @media (max-width: 599px) {
+       @content;
+    }
+  }
+  @else if $size == tablet-portrait-up {
+     @media (min-width: 600px){
+      @content;
+    }
+  }
+  @else if $size == tablet-landscape-up {
+     @media (min-width: 900px){
+      @content;
+    }
+  }
+  @else if $size == desktop-up {
+     @media (min-width: 1200px){
+      @content;
+    }
+  }
+  @else if $size == big-desktop-up {
+     @media (min-width: 1800px){
+      @content;
+    }
   }
 }
 
-header{
+header {
   width: 100%;
   height: 3.125em;
   position: fixed;
-  top: 0em;
-  left: 0em;
-  background-color: orange;
+  top: 0;
+  left: 0;
+  //background-color: orange;
+
   h1 {
-    background-color: blue;
-    color: green;
-    padding-left: .5em;
-    margin-bottom: .25em;
-  }
-  h4 {
+    //background-color: blue;
+    //color: green;
+    padding-left: 0.5em;
+    margin-bottom: 0.25em;
     display: inline-block;
-    padding: .25em;
-    background: red;
-    margin: 0em 0em;
   }
 
+  h4 {
+    display: inline-block;
+    padding: 0.25em;
+    //background: red;
+    margin: 0;
+    padding-left: 0.5em;
+  }
+}
+
+#temp {
+  height: 6em;
+  width: 100%;
+  margin-top: 11em;
+  display: flex;
+  justify-content: center;
+  /* center horizontally */
+  align-items: center;
+  /* center vertically */
+  h1 {
+    padding: 0;
+    font-size: 6em;
+  }
 }
 
 body {
-  background-color: purple;
+  //background: purple;
 }
-
-
-
-
 
 #bottom {
   background: green;
   width: 100%;
   height: 8em;
   position: fixed;
-  bottom: 0em;
-  left: 0em;
+  bottom: 0;
+  left: 0;
   background-color: orange;
+  text-align: center;
+
   .fiveDay {
     background: pink;
     display: inline-block;
-    padding: .25em;
-    background: red;
-    margin: 0em 0em;
+    padding: 0.25em;
+    margin: 0;
+    height: 6em;
+    width: 3.75em;
+    text-align: center;
+    margin-top: 0.65em;
 
+    .day {
+      background: red;
+      top: 0;
+    }
 
+    .icon {
+      padding: 1em 1em 1.45em;
+    }
+
+    .highLow {
+      background: green;
+      position: relative;
+      margin: 0 auto;
+      botom: 0;
+    }
   }
 }
-
-/* C to f toggle button*/
+/* C to f toggle button */
 .cmn-toggle {
   position: absolute;
   margin-left: -624.9375em;
-  visibility: hidden; }
+  visibility: hidden;
+}
 
 .cmn-toggle + label {
   display: block;
   position: relative;
   cursor: pointer;
   outline: none;
-  user-select: none; }
+  user-select: none;
+}
 
 input.cmn-toggle-yes-no + label {
   padding: 0.132em;
   width: 7.594em;
-  height: 3.75em; }
+  height: 3.75em;
+}
 
 input.cmn-toggle-yes-no + label:after,
 input.cmn-toggle-yes-no + label:before {
@@ -92,23 +140,28 @@ input.cmn-toggle-yes-no + label:before {
   font-family: "Roboto Slab", serif;
   font-size: 1.25em;
   text-align: center;
-  line-height: 3.75em; }
+  line-height: 3.75em;
+}
 
 input.cmn-toggle-yes-no + label:before {
   background-color: #dddddd;
   content: attr(data-off);
   transition: transform 0.5s;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+}
 
 input.cmn-toggle-yes-no + label:after {
   background-color: #8ce196;
   content: attr(data-on);
   transition: transform 0.5s;
   transform: rotateY(180deg);
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+}
 
 input.cmn-toggle-yes-no:checked + label:before {
-  transform: rotateY(180deg); }
+  transform: rotateY(180deg);
+}
 
 input.cmn-toggle-yes-no:checked + label:after {
-  transform: rotateY(0); }
+  transform: rotateY(0);
+}
