--- a/local_weather/css/styles.css
+++ b/local_weather/css/styles.css
@@ -66,6 +66,9 @@ header {
       botom: 0; }
 
 /* C to f toggle button */
+.switch {
+  display: inline-block; }
+
 .cmn-toggle {
   position: absolute;
   margin-left: -624.9375em;
@@ -83,8 +86,8 @@ header {
 
 input.cmn-toggle-yes-no + label {
   padding: 0.132em;
-  width: 7.594em;
-  height: 3.75em; }
+  width: 3.594em;
+  height: 1.75em; }
 
 input.cmn-toggle-yes-no + label:after,
 input.cmn-toggle-yes-no + label:before {
