--- a/local_weather/scss/styles.scss
+++ b/local_weather/scss/styles.scss
@@ -34,13 +34,29 @@ header {
   left: 0;
   //background-color: orange;
 
-  h1 {
-    //background-color: blue;
-    //color: green;
-    padding-left: 0.5em;
-    margin-bottom: 0.25em;
-    display: inline-block;
+
+  .cityandswitch {
+    //background: red;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    h1 {
+      //background-color: blue;
+      //color: green;
+      padding-left: 0.5em;
+      margin-bottom: 0.25em;
+      //display: inline-block;
+    }
+
+    .switch {
+      //display: inline-block;
+      margin-right: 1em;
+      padding-top: 1.25em;
+      margin-bottom: 0.25em;
+    }
   }
+
+
 
   h4 {
     display: inline-block;
@@ -107,11 +123,9 @@ body {
     }
   }
 }
-/* C to f toggle button */
-.switch {
-  display: inline-block;
-}
 
+
+/* C to f toggle button */
 .cmn-toggle {
   position: absolute;
   margin-left: -624.9375em;
@@ -127,35 +141,35 @@ body {
   user-select: none;
 }
 
-input.cmn-toggle-yes-no + label {
+input.cmn-toggle-c-f + label {
   padding: 0.132em;
   width: 3.594em;
   height: 1.75em;
 }
 
-input.cmn-toggle-yes-no + label:after,
-input.cmn-toggle-yes-no + label:before {
+input.cmn-toggle-c-f + label:after,
+input.cmn-toggle-c-f + label:before {
   display: block;
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  color: #fff;
+  color: black;
   font-family: "Roboto Slab", serif;
-  font-size: 1.25em;
+  font-size: 1em;
   text-align: center;
-  line-height: 3.75em;
+  line-height: 1.75em;
 }
 
-input.cmn-toggle-yes-no + label:before {
+input.cmn-toggle-c-f + label:before {
   background-color: #dddddd;
   content: attr(data-off);
   transition: transform 0.5s;
   backface-visibility: hidden;
 }
 
-input.cmn-toggle-yes-no + label:after {
+input.cmn-toggle-c-f + label:after {
   background-color: #8ce196;
   content: attr(data-on);
   transition: transform 0.5s;
@@ -163,10 +177,10 @@ input.cmn-toggle-yes-no + label:after {
   backface-visibility: hidden;
 }
 
-input.cmn-toggle-yes-no:checked + label:before {
+input.cmn-toggle-c-f:checked + label:before {
   transform: rotateY(180deg);
 }
 
-input.cmn-toggle-yes-no:checked + label:after {
+input.cmn-toggle-c-f:checked + label:after {
   transform: rotateY(0);
 }
