--- a/local_weather/css/styles.css
+++ b/local_weather/css/styles.css
@@ -39,6 +39,11 @@ header {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -62,7 +67,7 @@ header {
   left: 0;
   background-color: orange;
   text-align: center; }
-  #bottom .fiveDay {
+  #bottom .weatherInfo {
     background: pink;
     display: inline-block;
     padding: 0.25em;
@@ -70,17 +75,12 @@ header {
     height: 6em;
     width: 3.75em;
     text-align: center;
-    margin-top: 0.65em; }
-    #bottom .fiveDay .day {
-      background: red;
-      top: 0; }
-    #bottom .fiveDay .icon {
+    margin-top: 0.65em;
+    vertical-align: top; }
+    #bottom .weatherInfo .day {
+      background: red; }
+    #bottom .weatherInfo .number {
       padding: 1em 1em 1.45em; }
-    #bottom .fiveDay .highLow {
-      background: green;
-      position: relative;
-      margin: 0 auto;
-      botom: 0; }
 
 /* C to f toggle button */
 .cmn-toggle {
@@ -118,7 +118,7 @@ input.cmn-toggle-c-f + label:before {
   line-height: 1.75em; }
 
 input.cmn-toggle-c-f + label:before {
-  background-color: #dddddd;
+  background-color: #d35400;
   content: attr(data-off);
   -webkit-transition: -webkit-transform 0.5s;
   transition: -webkit-transform 0.5s;
@@ -129,7 +129,7 @@ input.cmn-toggle-c-f + label:before {
   backface-visibility: hidden; }
 
 input.cmn-toggle-c-f + label:after {
-  background-color: #8ce196;
+  background-color: #c0392b;
   content: attr(data-on);
   -webkit-transition: -webkit-transform 0.5s;
   transition: -webkit-transform 0.5s;
