--- a/local_weather/scss/styles.scss
+++ b/local_weather/scss/styles.scss
@@ -26,157 +26,147 @@
   }
 }
 
-header {
-  width: 100%;
-  height: 3.125em;
-  position: fixed;
-  top: 0;
-  left: 0;
-  //background-color: orange;
-  .cityandswitch {
-    //background: red;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    h1 {
-      //background-color: blue;
-      //color: green;
-      padding-left: 0.5em;
-      margin-bottom: 0.25em;
-      //display: inline-block;
-    }
-
-    .switch {
-      //display: inline-block;
-      margin-right: 1em;
-      padding-top: 1.25em;
-      margin-bottom: 0.25em;
-    }
-  }
-
-  h4 {
-    display: inline-block;
-    padding: 0.25em;
-    //background: red;
-    margin: 0;
-    padding-left: 0.5em;
-  }
-}
-
-#temp {
-  height: 6em;
-  width: 100%;
-  margin-top: 11em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  /* center horizontally */
-  align-items: center;
-  /* center vertically */
-  h1 {
-    padding: 0;
-    font-size: 6em;
-  }
-}
-
 body {
-  //background: purple;
-}
+  background-color: #3498db;
 
-#bottom {
-  background: green;
-  width: 100%;
-  height: 8em;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  background-color: orange;
-  text-align: center;
+  header {
+    width: 100%;
+    height: 3.125em;
+    position: fixed;
+    top: 0;
+    left: 0;
+    //background-color: orange;
+    .cityandswitch {
+      //background: red;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
 
-  .weatherInfo {
-    background: pink;
-    display: inline-block;
-    padding: 0.25em;
-    margin: 0;
-    height: 6em;
-    width: 3.75em;
-    text-align: center;
-    margin-top: 0.65em;
-    vertical-align: top;
+      h1 {
+        padding-left: 0.5em;
+        margin-bottom: 0.25em;
+      }
 
-    .day {
-      background: red;
-      //top: 0;
+      .switch {
+        //display: inline-block;
+        margin-right: 1em;
+        padding-top: 1.25em;
+        margin-bottom: 0.25em;
+      }
     }
 
-    .number {
-      padding: 1em 1em 1.45em;
+    h4 {
+      display: inline-block;
+      padding: 0.25em;
+      //background: red;
+      margin: 0;
+      padding-left: 0.5em;
     }
-
-    // .highLow {
-    //   background: green;
-    //   position: relative;
-    //   margin: 0 auto;
-    //   botom: 0;
-    // }
   }
-}
-/* C to f toggle button */
-.cmn-toggle {
-  position: absolute;
-  margin-left: -624.9375em;
-  visibility: hidden;
-}
 
-.cmn-toggle + label {
-  display: block;
-  position: relative;
-  cursor: pointer;
-  outline: none;
-  user-select: none;
-}
+  #temp {
+    height: 6em;
+    width: 100%;
+    margin-top: 11em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* center horizontally */
+    align-items: center;
+    /* center vertically */
+    h1 {
+      padding: 0;
+      font-size: 6em;
+    }
+  }
 
-input.cmn-toggle-c-f + label {
-  padding: 0.132em;
-  width: 3.594em;
-  height: 1.75em;
-}
+  #bottom {
+    //background: green;
+    width: 100%;
+    height: 8em;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    //background-color: orange;
+    text-align: center;
 
-input.cmn-toggle-c-f + label:after,
-input.cmn-toggle-c-f + label:before {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  color: black;
-  font-family: "Roboto Slab", serif;
-  font-size: 1em;
-  text-align: center;
-  line-height: 1.75em;
-}
+    .weatherInfo {
+      //background: pink;
+      display: inline-block;
+      padding: 0.25em;
+      margin: 0;
+      height: 6em;
+      width: 3.75em;
+      text-align: center;
+      margin-top: 0.65em;
+      vertical-align: top;
 
-input.cmn-toggle-c-f + label:before {
-  background-color: #d35400;
-  content: attr(data-off);
-  transition: transform 0.5s;
-  backface-visibility: hidden;
-}
+      .day {
+        //background: red;
+        //top: 0;
+      }
 
-input.cmn-toggle-c-f + label:after {
-  background-color: #c0392b;
-  content: attr(data-on);
-  transition: transform 0.5s;
-  transform: rotateY(180deg);
-  backface-visibility: hidden;
-}
+      .number {
+        padding: 1em 1em 1.45em;
+      }
+    }
+  }
+  /* C to f toggle button */
+  .cmn-toggle {
+    position: absolute;
+    margin-left: -624.9375em;
+    visibility: hidden;
+  }
 
-input.cmn-toggle-c-f:checked + label:before {
-  transform: rotateY(180deg);
-}
+  .cmn-toggle + label {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    user-select: none;
+  }
 
-input.cmn-toggle-c-f:checked + label:after {
-  transform: rotateY(0);
+  input.cmn-toggle-c-f + label {
+    padding: 0.132em;
+    width: 3.594em;
+    height: 1.75em;
+  }
+
+  input.cmn-toggle-c-f + label:after,
+  input.cmn-toggle-c-f + label:before {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    color: black;
+    font-family: "Roboto Slab", serif;
+    font-size: 1em;
+    text-align: center;
+    line-height: 1.75em;
+  }
+
+  input.cmn-toggle-c-f + label:before {
+    background-color: #d35400;
+    content: attr(data-off);
+    transition: transform 0.5s;
+    backface-visibility: hidden;
+  }
+
+  input.cmn-toggle-c-f + label:after {
+    background-color: #c0392b;
+    content: attr(data-on);
+    transition: transform 0.5s;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+  }
+
+  input.cmn-toggle-c-f:checked + label:before {
+    transform: rotateY(180deg);
+  }
+
+  input.cmn-toggle-c-f:checked + label:after {
+    transform: rotateY(0);
+  }
 }
