added some fucking style and other stuff like information about whether the twitch user is online or not

--- a/twitch/styles.scss
+++ b/twitch/styles.scss
@@ -1,4 +1,45 @@
-#output img {
+img {
   height: 3em;
   width: 3em;
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
+body {
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+
+  .well {
+    align-content: center;
+    background-color: #2980b9;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: .25em;
+    padding: .5em;
+    width: 50em;
+
+
+    //margin-top: 2em;
+
+    h3 {
+      padding-right: 3em;
+      width: 5em;
+    }
+
+    p {
+      align-self: flex-end;
+    }
+  }
+}
+
+h2 {
+  align-self: center;
+  flex-direction: column;
+  justify-content: center;
+
 }
