--- a/twitch/styles.css
+++ b/twitch/styles.css
@@ -1,10 +1,40 @@
+button {
+  -webkit-box-shadow: .2em .2em 0 black;
+  box-shadow: .2em .2em 0 black;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding: 1.7em;
+  border-radius: 0.75em;
+  font-size: 1.2em; }
+
 img {
   height: 3em;
   padding-left: 3em;
   padding-right: 3em;
   width: 3em; }
 
+.output {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
 body {
+  background-color: #875F9A;
   -webkit-align-content: center;
   -ms-flex-line-pack: center;
   align-content: center;
@@ -26,35 +56,61 @@ body {
   -ms-flex-pack: center;
   justify-content: center; }
   body .well {
+    -webkit-box-shadow: .2em .2em 0 black;
+    box-shadow: .2em .2em 0 black;
+    width: 26em;
     -webkit-align-content: center;
     -ms-flex-line-pack: center;
     align-content: center;
-    background-color: #2980b9;
-    border-radius: .75em;
+    background-color: #5D3F6A;
+    border-radius: 0.75em;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
+    -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: start;
     -webkit-justify-content: flex-start;
     -ms-flex-pack: start;
     justify-content: flex-start;
-    margin: .25em;
+    margin: 0.25em;
     padding: 1em; }
-    body .well h3 {
+    body .well h1 {
       padding-right: 1em;
       width: 5em; }
+    body .well .title {
+      display: -webkit-inline-box;
+      display: -webkit-inline-flex;
+      display: -ms-inline-flexbox;
+      display: inline-flex;
+      height: 2em;
+      margin-bottom: 1.5em; }
+    body .well .pholder {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-box-pack: start;
+      -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+      justify-content: flex-start;
+      margin-left: -2em; }
     body .well p {
       -webkit-align-self: flex-end;
       -ms-flex-item-align: end;
       align-self: flex-end;
       padding-left: 5em;
-      padding-right: 2em; }
+      padding-right: 2em;
+      font-size: 1.5em; }
 
 h2 {
   -webkit-align-self: center;
@@ -75,3 +131,6 @@ div.well.offline.hidden {
 
 div.well.online.hidden {
   display: none; }
+
+div.well.online {
+  background-color: #A87CA0; }
