--- a/twitch/styles.css
+++ b/twitch/styles.css
@@ -1,13 +1,31 @@
+a:link {
+  color: #E9CD81; }
+
+a:visited {
+  color: #977824; }
+
+a:hover {
+  color: #FFF4D6; }
+
+.top {
+  font-size: 4em;
+  color: #81ABDA; }
+
 button {
-  -webkit-box-shadow: .2em .2em 0 black;
-  box-shadow: .2em .2em 0 black;
+  -webkit-box-shadow: 0.2em 0.2em 0 black;
+  box-shadow: 0.2em 0.2em 0 black;
   width: 40%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 1.3em;
   text-align: center;
-  padding: 1.7em;
+  padding: 1em;
   border-radius: 0.75em;
-  font-size: 1.2em; }
+  font-size: 1.2em;
+  border-color: #5A8BC1;
+  background-color: #293646;
+  color: #5A8BC1;
+  font-size: 3em; }
 
 img {
   height: 3em;
@@ -34,7 +52,7 @@ img {
   justify-content: center; }
 
 body {
-  background-color: #875F9A;
+  background-color: #3A6CA3;
   -webkit-align-content: center;
   -ms-flex-line-pack: center;
   align-content: center;
@@ -54,15 +72,17 @@ body {
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
-  justify-content: center; }
+  justify-content: center;
+  white-space: nowrap;
+  color: #293646; }
   body .well {
-    -webkit-box-shadow: .2em .2em 0 black;
-    box-shadow: .2em .2em 0 black;
+    -webkit-box-shadow: 0.2em 0.2em 0 black;
+    box-shadow: 0.2em 0.2em 0 black;
     width: 26em;
     -webkit-align-content: center;
     -ms-flex-line-pack: center;
     align-content: center;
-    background-color: #5D3F6A;
+    background-color: #81ABDA;
     border-radius: 0.75em;
     display: -webkit-box;
     display: -webkit-flex;
@@ -80,8 +100,9 @@ body {
     margin: 0.25em;
     padding: 1em; }
     body .well h1 {
-      padding-right: 1em;
-      width: 5em; }
+      padding-right: 0.5em;
+      width: 5em;
+      white-space: nowrap; }
     body .well .title {
       display: -webkit-inline-box;
       display: -webkit-inline-flex;
@@ -108,7 +129,7 @@ body {
       -webkit-align-self: flex-end;
       -ms-flex-item-align: end;
       align-self: flex-end;
-      padding-left: 5em;
+      padding-left: 2em;
       padding-right: 2em;
       font-size: 1.5em; }
 
@@ -133,4 +154,4 @@ div.well.online.hidden {
   display: none; }
 
 div.well.online {
-  background-color: #A87CA0; }
+  background-color: #526882; }
