--- a/twitch/styles.scss
+++ b/twitch/styles.scss
@@ -1,16 +1,47 @@
-$wisteria-purple: #875F9A;
-$bellflower: #5D3F6A;
-$thin-color: #A87CA0;
+//blues
+$danube: #81ABDA;
+$blue-bayoux: #526882;
+$fiord: #405569;
+$blue: #e0edfb;
+$sam-marion: #3A6CA3;
+$steel-blue: #5A8BC1;
+$pickled-bluewood: #293646;
+//yellows
+$milk-punch: #FFF4D6;
+$rob-roy: #E9CD81;
+$kumero: #977824;
+
+a:link {
+  color: $rob-roy;
+}
+
+a:visited {
+  color: $kumero;
+}
+
+a:hover {
+  color: $milk-punch;
+}
+
+.top {
+  font-size: 4em;
+  color: $danube;
+}
 
 button {
-  box-shadow: .2em .2em 0 black;
+  box-shadow: 0.2em 0.2em 0 black;
   width: 40%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 1.3em;
   text-align: center;
-  padding: 1.7em;
+  padding: 1em;
   border-radius: 0.75em;
   font-size: 1.2em;
+  border-color: $steel-blue;
+  background-color: $pickled-bluewood;
+  color: $steel-blue;
+  font-size: 3em;
 }
 
 img {
@@ -28,18 +59,20 @@ img {
 }
 
 body {
-  background-color: $wisteria-purple;
+  background-color: $sam-marion;
   align-content: center;
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  white-space: nowrap;
+  color: $pickled-bluewood;
 
   .well {
-    box-shadow: .2em .2em 0 black;
+    box-shadow: 0.2em 0.2em 0 black;
     width: 26em;
     align-content: center;
-    background-color: $bellflower;
+    background-color: $danube;
     border-radius: 0.75em;
     display: flex;
     flex-direction: column;
@@ -49,8 +82,9 @@ body {
     // width: 50em;
     //margin-top: 2em;
     h1 {
-      padding-right: 1em;
+      padding-right: 0.5em;
       width: 5em;
+      white-space: nowrap;
     }
 
     .title {
@@ -68,7 +102,7 @@ body {
 
     p {
       align-self: flex-end;
-      padding-left: 5em;
+      padding-left: 2em;
       padding-right: 2em;
       font-size: 1.5em;
     }
@@ -90,5 +124,5 @@ div.well.online.hidden {
 }
 
 div.well.online {
-  background-color: $thin-color;
+  background-color: $blue-bayoux;
 }
